--- a/Projekt MVC/Views/Home/Dyskusja.cshtml
+++ b/Projekt MVC/Views/Home/Dyskusja.cshtml
@@ -17,7 +17,7 @@
         {
             
             <li>
-                <b>@odpowiedz.Autor </b>, <p>@odpowiedz.Tresc </p>,
+                <b>@odpowiedz.Autor.Nazwa </b> <p>@odpowiedz.Tresc </p>
             </li>
 
             if(userRole == "admin")
