--- a/Projekt MVC/Views/Home/Forum.cshtml
+++ b/Projekt MVC/Views/Home/Forum.cshtml
@@ -30,22 +30,22 @@ else
     <div class="list-group">
         @foreach (var dyskusja in Model)
         {
-            <div class="list-group-item">
-                <a href="/Home/Dyskusja/@dyskusja.DyskusjaId" class="list-group-item-action">
+            <div class="list-group-item" style="display: flex; justify-content: space-between; align-items: center;">
+                <a href="/Home/Dyskusja/@dyskusja.DyskusjaId" class="list-group-item-action" style="flex: 1;">
                     @dyskusja.Temat
-                
+                </a>
 
                 @if (ViewBag.Rola == "admin")
                 {
-                    <form method="post" asp-action="UsunDyskusje" asp-controller="Admin" style="display: inline; margin-left: 200px">
+                    <form method="post" asp-action="UsunDyskusje" asp-controller="Admin" style="display: flex; align-items: center; margin-left: 10px;">
                         <input type="hidden" name="id" value="@dyskusja.DyskusjaId" />
                         <button type="submit" class="red-button" onclick="f(event)">Usuń</button>
                     </form>
                 }
-                </a>
             </div>
         }
     </div>
+
 
 }
 
