--- a/Projekt MVC/Views/admin/ZarzadzajUżytkownikami.cshtml
+++ b/Projekt MVC/Views/admin/ZarzadzajUżytkownikami.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<Projekt_MVC.Models.User>
 
 @{
-    ViewData["Title"] = "ZarzadzajDyskusjami";
+    ViewData["Title"] = "ZarzadzajUżytkownikami";
 }
 
 <hr />
