bezpieczna procedura przypominania i zmiany hasła – 2 pkt.

--- a/Projekt MVC/Views/Home/Index.cshtml
+++ b/Projekt MVC/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@ else
                 <tr>
                     <td><a href="Home/PrzejdzDoFora/@forum.IdForum">@forum.Nazwa</a></td>
                     <td>@forum.Opis</td>
-                    <td>@(forum.Dyskusje != null ? forum.Dyskusje.Count : 0)</td>
+                    <td>@forum.LiczbaWatkow</td>
                 </tr>
             }
         </tbody>
