--- a/Projekt MVC/Views/Rejestracja/Logowanie.cshtml
+++ b/Projekt MVC/Views/Rejestracja/Logowanie.cshtml
@@ -1,11 +1,4 @@
-﻿@model Projekt_MVC.Models.User
-
-@{
-    Layout = "_LayoutPusty";
-    ViewData["Title"] = "Logowanie";
-}
-
-<div class="loginKontener">
+﻿<div class="loginKontener">
     <div class="loginForma">
         <h2>Logowanie</h2>
         <form method="post" action="SprawdzanieDanychLogowania">
@@ -15,5 +8,6 @@
         </form>
 
         <a href="Rejestracja">Zarejestruj się</a>
+        <a href="PrzypomnijHaslo">Zapomniałeś hasła?</a>
     </div>
 </div>
