działa + naprawiłem wyświetlanie liczby odpowiedzi

--- a/Projekt MVC/Views/Home/Forum.cshtml
+++ b/Projekt MVC/Views/Home/Forum.cshtml
@@ -39,7 +39,7 @@
                 <div class="list-group-item">
                     <a href="/Home/Dyskusja/@dyskusja.DyskusjaId" class="list-group-item-action">
                         @dyskusja.Temat Opis: @dyskusja.Opis
-                        Liczba odpowiedzi: @(dyskusja.Odpowiedzi != null ? dyskusja.Odpowiedzi.Count : 0)
+                        Liczba odpowiedzi: @dyskusja.LiczbaOdpowiedzi
                         Liczba odsłon: @dyskusja.LiczbaOdwiedzen
                     </a>
 
