Commituje, bo się laptop razładuje, nie czuję kiedy rymuję

--- a/Projekt MVC/Views/Home/Forum.cshtml
+++ b/Projekt MVC/Views/Home/Forum.cshtml
@@ -16,7 +16,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <!-- Add any necessary meta tags, stylesheets, or other head content here -->
+    <link rel="stylesheet" href="@ViewBag.CurrentSkinCssFilePath">
 </head>
 <body>
 
