--- a/Projekt MVC/Views/Home/Profil.cshtml
+++ b/Projekt MVC/Views/Home/Profil.cshtml
@@ -6,6 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+
+    @* Dodaj link do aktualnie wybranej skórki użytkownika *@
+    <link rel="stylesheet" href="@ViewBag.CurrentSkinCssFilePath">
 </head>
 
 
@@ -36,6 +39,17 @@
                 }
             </ul>
         </section>
+
+        <form asp-controller="ProfilUzytkownika" asp-action="ZmienSkorke" method="post">
+            <label for="skorki">Wybierz skórkę:</label>
+            <select name="skorki" id="skorki">
+                @foreach (var skin in ViewBag.AvailableSkins)
+                {
+                    <option value="@skin.Id">@skin.Nazwa</option>
+                }
+            </select>
+            <button type="submit">Zmień skórkę</button>
+        </form>
 
         <section id="informacje" class="sectionProfilu">
             <h2 style="text-align: center">Zmiana danych</h2>
