--- a/Projekt MVC/Views/Rejestracja/Logowanie.cshtml
+++ b/Projekt MVC/Views/Rejestracja/Logowanie.cshtml
@@ -1,4 +1,8 @@
-﻿<div class="loginKontener">
+﻿@{
+    Layout = "_LayoutPusty";
+}
+
+<div class="loginKontener">
     <div class="loginForma">
         <h2>Logowanie</h2>
         <form method="post" action="SprawdzanieDanychLogowania">
