--- a/Projekt MVC/Views/Rejestracja/PrzypomnijHaslo.cshtml
+++ b/Projekt MVC/Views/Rejestracja/PrzypomnijHaslo.cshtml
@@ -1,4 +1,9 @@
-﻿<div class="przypomnienieHasla">
+﻿@{
+    Layout = "_LayoutPusty";
+    ViewData["Title"] = "Rejestracja";
+}
+
+<div class="przypomnienieHasla">
     <h2>Przypomnij hasło</h2>
     <form method="post" action="PrzypomnijHaslo">
         <input type="email" class="login" name="Email" placeholder="Adres email" required>
