--- a/Projekt MVC/Views/Home/Index.cshtml
+++ b/Projekt MVC/Views/Home/Index.cshtml
@@ -18,6 +18,10 @@
     <link rel="stylesheet" href="@ViewBag.CurrentSkinCssFilePath">
 </head>
 
+<div style="text-align: right; margin-top: 10px">
+    <p>Liczba zarejestrowanych użytkowników: @ViewBag.LiczbaUżytkownikow</p>
+</div>
+
 
 <h1> Fora: </h1>
 
