--- a/Projekt MVC/wwwroot/css/dark.css
+++ b/Projekt MVC/wwwroot/css/dark.css
@@ -25,3 +25,11 @@ button {
     button:hover {
         background-color: #5a6268;
     }
+
+h1, h2, h3, h4, h5, h6 {
+    color: #fff;
+}
+
+label, td, table {
+    color: white !important;
+}
