--- a/Projekt MVC/Views/Home/Dyskusja.cshtml
+++ b/Projekt MVC/Views/Home/Dyskusja.cshtml
@@ -4,43 +4,52 @@
     var userRole = Context.Session.GetString("UserRole");
 }
 
+<!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet" href="@ViewBag.CurrentSkinCssFilePath">
+</head>
+<body>
 
-<h3 style="text-align: center; margin-top: 50px">@Model.Temat</h3>
-<span style="margin-left: 300px; margin-right: 300px; margin-top: 100px">@Model.Opis</span>
+    <h3 style="text-align: center; margin-top: 50px">@Model.Temat</h3>
+    <span style="margin-left: 300px; margin-right: 300px; margin-top: 100px">@Model.Opis</span>
 
 
-@if (Model.Odpowiedzi != null && Model.Odpowiedzi.Any())
-{
-    <h4>Odpowiedzi:</h4>
-    <ul>
-        @foreach (var odpowiedz in Model.Odpowiedzi)
-        {
-            
-            <li>
-                <b>@odpowiedz.Autor.Nazwa </b> <p>@odpowiedz.Tresc </p>
-            </li>
-
-            if(userRole == "admin")
+    @if (Model.Odpowiedzi != null && Model.Odpowiedzi.Any())
+    {
+        <h4>Odpowiedzi:</h4>
+        <ul>
+            @foreach (var odpowiedz in Model.Odpowiedzi)
             {
-                <form asp-action="EdytujOdpowiedz" asp-controller="Admin">
-                    <input type="hidden" name="IdOdpowiedzi" value="@odpowiedz.OdpowiedzId">
-                    <button>Edytuj Odpowiedź</button>
-                </form>
-                <form asp-action="UsunOdpowiedz" asp-controller="Admin">
-                    <input type="hidden" name="IdOdpowiedzi" value="@odpowiedz.OdpowiedzId">
-                    <input type="hidden" name="IdDyskusji" value="@odpowiedz.Dyskusja.DyskusjaId">
-                    <button>Usuń Odpowiedź</button>
-                </form>
+
+                <li>
+                    <b>@odpowiedz.Autor.Nazwa </b> <p>@odpowiedz.Tresc </p>
+                </li>
+
+                if (userRole == "admin")
+                {
+                    <form asp-action="EdytujOdpowiedz" asp-controller="Admin">
+                        <input type="hidden" name="IdOdpowiedzi" value="@odpowiedz.OdpowiedzId">
+                        <button>Edytuj Odpowiedź</button>
+                    </form>
+                    <form asp-action="UsunOdpowiedz" asp-controller="Admin">
+                        <input type="hidden" name="IdOdpowiedzi" value="@odpowiedz.OdpowiedzId">
+                        <input type="hidden" name="IdDyskusji" value="@odpowiedz.Dyskusja.DyskusjaId">
+                        <button>Usuń Odpowiedź</button>
+                    </form>
+                }
             }
-        }
-    </ul>
-}
+        </ul>
+    }
 
 
-<form asp-controller="Home" asp-action="NapiszOdpowiedz" method="post">
-    <div>
-        <input type="hidden" name="IdDyskusji" value="@Model.DyskusjaId">
-        <textarea type="text" name="odpowiedz" placeholder="Napisz odpowiedź..." class="OdpowiedzTextArea"></textarea>
-        <button type="submit">Odpowiedz</button>
-    </div>
-</form>
+    <form asp-controller="Home" asp-action="NapiszOdpowiedz" method="post">
+        <div>
+            <input type="hidden" name="IdDyskusji" value="@Model.DyskusjaId">
+            <textarea type="text" name="odpowiedz" placeholder="Napisz odpowiedź..." class="OdpowiedzTextArea"></textarea>
+            <button type="submit">Odpowiedz</button>
+        </div>
+    </form>
+
+
+</body>
