--- a/Projekt MVC/wwwroot/css/blue.css
+++ b/Projekt MVC/wwwroot/css/blue.css
@@ -25,3 +25,11 @@ button {
     button:hover {
         background-color: #0056b3;
     }
+
+h1, h2, h3, h4, h5, h6 {
+    color: #000;
+}
+
+label, td, table {
+    color: black !important;
+}
