--- a/Projekt MVC/wwwroot/css/site.css
+++ b/Projekt MVC/wwwroot/css/site.css
@@ -98,7 +98,6 @@ header {
 label {
     display: block;
     margin-bottom: 8px;
-    color: #333;
 }
 
 textarea {
@@ -134,6 +133,21 @@ textarea {
         background-color: #45a049;
     }
 
+
+.tabela {
+    --bs-table-bg: transparent;
+    --bs-table-accent-bg: transparent;
+    --bs-table-striped-color: #212529;
+    --bs-table-striped-bg: rgba(0, 0, 0, 0.05);
+    --bs-table-active-color: #212529;
+    --bs-table-active-bg: rgba(0, 0, 0, 0.1);
+    --bs-table-hover-color: #212529;
+    --bs-table-hover-bg: rgba(0, 0, 0, 0.075);
+    width: 100%;
+    margin-bottom: 1rem;
+    vertical-align: top;
+    border-color: #dee2e6;
+}
 
 //CCS ODNOŒNIE PROFILU:
 
