--- a/Projekt MVC/Views/Shared/_Layout.cshtml
+++ b/Projekt MVC/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
                 <button type="submit" class="StworzDyskusje">Zarządzaj Kategoriami</button>
             </form>
 
-            <form asp-controller="Home" asp-action="Profil" method="post">
+            <form asp-controller="ProfilUzytkownika" asp-action="Index" method="post">
                 <button type="submit" class="btn btn-outline-secondary" style="margin-left: 40px; margin-right: 100px">Twój profil</button>
             </form>
 
