--- a/Projekt MVC/Views/Home/Dyskusja.cshtml
+++ b/Projekt MVC/Views/Home/Dyskusja.cshtml
@@ -12,7 +12,7 @@
 <body>
 
     <h3 style="text-align: center; margin-top: 50px">@Model.Temat</h3>
-    <span style="margin-left: 300px; margin-right: 300px; margin-top: 100px">@Model.Opis</span>
+    <span style="margin-left: 300px; margin-right: 300px; margin-top: 100px">@Html.Raw(Model.Opis)</span>
 
 
     @if (Model.Odpowiedzi != null && Model.Odpowiedzi.Any())
@@ -23,7 +23,7 @@
             {
 
                 <li>
-                    <b>@odpowiedz.Autor.Nazwa </b> <p>@odpowiedz.Tresc </p>
+                    <b>@odpowiedz.Autor.Nazwa </b> <p>@Html.Raw(odpowiedz.Tresc) </p>
                 </li>
 
                 if (userRole == "admin")
