Wysyłanie prywatnych wiadomości

--- a/Projekt MVC/Views/Shared/_LayoutNieWForum.cshtml
+++ b/Projekt MVC/Views/Shared/_LayoutNieWForum.cshtml
@@ -27,6 +27,10 @@
                 <button type="submit" class="btn btn-outline-secondary" style="margin-left: 40px; margin-right: 100px">Twój profil</button>
             </form>
 
+            <form asp-controller="Home" asp-action="Wiadomosci" method="post">
+                <button type="submit" class="btn btn-outline-secondary" style="margin-left: 40px; margin-right: 100px">Wiadomosci</button>
+            </form>
+
             <form asp-controller="Rejestracja" asp-action="Logowanie" method="post">
                 <button type="submit" class="Wyloguj">Wyloguj</button>
             </form>
