--- a/Projekt MVC/Views/Home/Forum.cshtml
+++ b/Projekt MVC/Views/Home/Forum.cshtml
@@ -38,7 +38,7 @@
             {
                 <div class="list-group-item">
                     <a href="/Home/Dyskusja/@dyskusja.DyskusjaId" class="list-group-item-action">
-                        @dyskusja.Temat Opis: @dyskusja.Opis
+                        @dyskusja.Temat
                         Liczba odpowiedzi: @dyskusja.LiczbaOdpowiedzi
                         Liczba odsłon: @dyskusja.LiczbaOdwiedzen
                     </a>
