--- a/Projekt MVC/Views/Home/Dyskusja.cshtml
+++ b/Projekt MVC/Views/Home/Dyskusja.cshtml
@@ -48,7 +48,12 @@
             }
         </ul>
     }
-
+    @if (TempData["ErrorMessage"] != null)
+    {
+        <script>
+            alert('@TempData["ErrorMessage"]');
+        </script>
+    }
 
     <form asp-controller="Home" asp-action="NapiszOdpowiedz" method="post">
         <div>
