--- a/Projekt MVC/Views/Shared/_Layout.cshtml
+++ b/Projekt MVC/Views/Shared/_Layout.cshtml
@@ -48,6 +48,10 @@
                 <button type="submit" class="StworzDyskusje">Zarządzaj Kategoriami</button>
             </form>
 
+            <form asp-controller="Admin" asp-action="ZarzadzajZakazanymiSlowami" method="post">
+                <button type="submit" class="StworzDyskusje">Zarządzaj Zakazanymi Słowami</button>
+            </form>
+
             <form asp-controller="Home" asp-action="Wiadomosci" method="post">
                 <button type="submit" class="btn btn-outline-secondary" style="margin-left: 40px; margin-right: 100px">Wiadomosci</button>
             </form>
