--- a/Projekt MVC/Views/Home/Index.cshtml
+++ b/Projekt MVC/Views/Home/Index.cshtml
@@ -38,6 +38,7 @@ else
             <tr>
                 <th>Nazwa Forum</th>
                 <th>Opis</th>
+                <th>Kategoria</th>
                 <th>Liczba Dyskusji</th>
                 <th>Liczba Wiadomości</th>
             </tr>
@@ -48,6 +49,7 @@ else
                 <tr>
                     <td><a href="Home/PrzejdzDoFora/@forum.IdForum">@forum.Nazwa</a></td>
                     <td>@forum.Opis</td>
+                    <td>@forum.Kategoria.Nazwa</td>
                     <td>@forum.LiczbaWatkow</td>
                     <td>@forum.LiczbaWiadomosci</td>
                 </tr>
