--- a/Projekt MVC/Views/Home/Dyskusja.cshtml
+++ b/Projekt MVC/Views/Home/Dyskusja.cshtml
@@ -33,7 +33,7 @@
                     }
                 </li>
 
-                if (userRole == "admin")
+                if (userRole == "admin" || ViewBag.CzyMod == 1)
                 {
                     <form asp-action="EdytujOdpowiedz" asp-controller="Admin">
                         <input type="hidden" name="IdOdpowiedzi" value="@odpowiedz.OdpowiedzId">
