--- a/Projekt MVC/Views/Home/Dyskusja.cshtml
+++ b/Projekt MVC/Views/Home/Dyskusja.cshtml
@@ -24,7 +24,7 @@
 
                 <li>
                     <b>@odpowiedz.Autor.Nazwa</b> <p>@Html.Raw(odpowiedz.Tresc)</p>
-                    @if (!odpowiedz.ZgloszenieModeracji)
+                    @if (!odpowiedz.ZgloszenieModeracji && userRole != "admin" && ViewBag.CzyMod != 1)
                     {
                         <form asp-action="ZglosOdpowiedzDoModeracji" asp-controller="Home" method="post">
                             <input type="hidden" name="IdOdpowiedzi" value="@odpowiedz.OdpowiedzId" />
