--- a/Projekt MVC/Views/Shared/_Layout.cshtml
+++ b/Projekt MVC/Views/Shared/_Layout.cshtml
@@ -44,6 +44,10 @@
                 <button type="submit" class="StworzDyskusje">Zarządzaj Użytkownikami</button>
             </form>
 
+            <form asp-controller="Admin" asp-action="ZarzadzajOgloszeniami" method="post">
+                <button type="submit" class="StworzDyskusje">Zarządzaj Ogloszeniami</button>
+            </form>
+
             <form asp-controller="Admin" asp-action="ZarządzajKategoriami" method="post">
                 <button type="submit" class="StworzDyskusje">Zarządzaj Kategoriami</button>
             </form>
